added user routes getUserProjects, getProjectFollowings, and getAnotherUsersProjects
